[tool.poetry]
name = "dagster-fan-in-repro"
version = "0.1.0"
description = ""
authors = ["Max Goisser <max@goisser.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
dagster = "^1.7.4"
dagster-webserver = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "reproduction"